# PFI-Firmware

./: readme.md
Flight-Controller/: .gitignore  partitions.csv  sdkconfig
Flight-Controller/components/bmi160/: CMakeLists.txt  bmi160.c  communications.c  communications_v2.c
Flight-Controller/components/controllers/: CMakeLists.txt  controllers.c
Flight-Controller/components/drone/: CMakeLists.txt  drone.c
Flight-Controller/components/mma/: CMakeLists.txt  mma.c
Flight-Controller/components/ps3/: CMakeLists.txt
Flight-Controller/components/ps3/src/: ps3.c  ps3_spp.c
Flight-Controller/components/ps3/src/include/: ps3.h
Flight-Controller/components/pwm/: CMakeLists.txt  pwm.c
Flight-Controller/components/state_machine/: CMakeLists.txt  state_machine.c
Flight-Controller/components/tasks/: CMakeLists.txt  tasks.c
Flight-Controller/components/transmitter/: CMakeLists.txt  transmitter.c  transmitter_structs.c
Flight-Controller/components/transmitter/include/: transmitter.h  transmitter_structs.h
Flight-Controller/components/transmitter/src/: transmitter.c
Flight-Controller/main/: CMakeLists.txt  main.c
Flight-Controller/main/src/: main.c
Flight-Controller/spiffs/: drone_configs.csv  index.html  web_transmitter.html
Side-Projects/Barometric/: CMakeLists.txt
Side-Projects/Barometric/include/: bmp180.h  communication.h  registers.h
Side-Projects/Barometric/main/: CMakeLists.txt  bmp180.c  communications.c  main.c
Side-Projects/FlashMemoryExample/: CMakeLists.txt
Side-Projects/FlashMemoryExample/main/: main.c
Side-Projects/Printer/: CMakeLists.txt
Side-Projects/Printer/main/: main.c
Side-Projects/web-joystick-SA/: CMakeLists.txt  partitions.csv  sdkconfig
Side-Projects/web-joystick-SA/main/: CMakeLists.txt  main.c
(+34 files in other folders)
